# Storage

./: README.md  build.sh  compile.sh  meson.build
src/: TmpMain.vala  meson.build
src/Application/: CookieStorageInterface.vala  LocalStorageInterface.vala  PersistentStorageInterface.vala  SessionStorageInterface.vala  VolatileStorageInterface.vala
src/Domain/Entity/: Cookie.vala
src/Domain/Enum/: SitePolicyEnum.vala
src/Entity/: Cookie.vala
src/Enum/: SitePolicyEnum.vala
